Suggestions list fixes (#237)
* [SuggestionsList] Update to use :hover pseudoclass

No need to involve JavaScript

* [SuggestionsList] Change highlight to use bold

* [SuggestionsList] Allow to run past the bottom of the viewport

Callout’s default behaviour is to clip the contents height to the bottom of the page and use scrollbars

* [SuggestionsList] Disable animation

* [SuggestionsList] Add border-radius

--- a/src/components/SuggestionsList/SuggestionsList.css
+++ b/src/components/SuggestionsList/SuggestionsList.css
@@ -1,6 +1,14 @@
 /*! Copyright (c) Microsoft Corporation. All rights reserved. Licensed under the MIT license. */
 @import "src/css/variables/colors.css";
 
+.y-suggestions-list.ms-Callout {
+  animation-name: none;
+}
+
+.y-suggestions-list .ms-Callout-main {
+  border-radius: 1px;
+}
+
 .y-suggestions-list--with-status .y-suggestions-list--loading {
   height: 5.2rem;
 }
