--- a/src/components/SuggestionsList/SuggestionsListItem.css
+++ b/src/components/SuggestionsList/SuggestionsListItem.css
@@ -6,14 +6,10 @@
   padding: 0.4rem 1.2rem 0.8rem 1.2rem;
 }
 
-.y-suggestions-list-item--selected {
-  background-color: $suggestionsListItemBackgroundColor__keyboardNavigate;
-}
-
-.y-suggestions-list-item--hover {
+.y-suggestions-list-item:hover {
   background-color: $suggestionsListItemBackgroundColor__mouseHover;
 }
 
-.y-suggestions-list-item--highlight {
-  text-decoration: underline;
+.y-suggestions-list-item--selected {
+  background-color: $suggestionsListItemBackgroundColor__keyboardNavigate;
 }
